# pancakes

./: Cargo.toml
src/: fannkuch_adaptive.rs  fannkuch_rayon.rs  fannkuch_rayon1.rs  fannkuch_rayon2.rs  fannkuch_sequential.rs  lib.rs
