[package]
name = "pancakes"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rayon = { git = "https://github.com/hedonhermdev/rayon", branch = "partial-fold" }
rayon = { path = "/Users/hedonhermdev/src/github.com/rayon-rs/rayon" }
csv = "*"
anyhow = "*"
num_cpus = "1.0"
fast-tracer = { git = "https://github.com/wagnerf42/fast-tracer" }
tracing = "0.1"
